[gd_scene load_steps=2 format=3 uid="uid://equipment_ui_base_001"]

[ext_resource type="Script" path="res://scripts/ui/equipment_ui_base.gd" id="1"]

[node name="EquipmentUIBase" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 40.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="EquipmentSide" type="VBoxContainer" parent="Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Panel/HBoxContainer/EquipmentSide"]
layout_mode = 2
text = "Equipment"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/HBoxContainer/EquipmentSide"]
layout_mode = 2
size_flags_vertical = 3

[node name="ItemList" type="VBoxContainer" parent="Panel/HBoxContainer/EquipmentSide/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VSeparator" type="VSeparator" parent="Panel/HBoxContainer"]
layout_mode = 2

[node name="PlayerSide" type="VBoxContainer" parent="Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Panel/HBoxContainer/PlayerSide"]
layout_mode = 2
text = "Your Inventory"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/HBoxContainer/PlayerSide"]
layout_mode = 2
size_flags_vertical = 3

[node name="ItemList" type="VBoxContainer" parent="Panel/HBoxContainer/PlayerSide/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TitleLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 30.0
grow_horizontal = 2
text = "Equipment"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CloseButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -80.0
offset_top = 5.0
offset_right = -10.0
offset_bottom = 35.0
grow_horizontal = 0
text = "Close (ESC)"
